--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,14 +8,37 @@
 
     <!-- AUTHOR -->
     <!-- CHAT MADE BY JAIR HUAMAN BELLIDO -->
-
+    <link rel="stylesheet" href="/public/css/login.css">
 
 </head>
 <body>
+    <div class="container-login flexCSC">
 
-    <form action="/chat" method="POST">
-        <input type="text" name="username" placeholder="ingrese su usuario">
-        <input type="submit" value="ingresar">
-    </form>
+        <div class="header-login flexCCC">
+                <%- include('partials/header'); -%>
+        </div>
+
+
+        <div class="avatar-img">
+            <img id="avatar" width="96" height="96" src="https://store.playstation.com/store/api/chihiro/00_09_000/container/US/en/99/UP2538-CUSA05620_00-AV00000000000118//image?_version=00_09_000&platform=chihiro&w=720&h=720&bg_color=000000&opacity=100" alt="">
+
+        </div>
+
+        <form action="/chat" method="POST">
+
+            <div class="field-login flexSCC">
+                <label for="">Profile Image </label>
+                <input  id="input-avatar"  onkeyup="keyupE()" autocomplete="off" type="text" placeholder="Ingrese el link de la imagen" value="https://store.playstation.com/store/api/chihiro/00_09_000/container/US/en/99/UP2538-CUSA05620_00-AV00000000000118//image?_version=00_09_000&platform=chihiro&w=720&h=720&bg_color=000000&opacity=100">
+                
+            </div>
+            <div class="field-login flexSCC">
+                <label for="">Username</label>
+                <input autocomplete="off" type="text" name="username" placeholder="ingrese su usuario">
+            </div>
+            <input type="submit" value="Join Chat">
+        </form>
+
+    </div>
+    <script src="/public/js/login.js"></script>
 </body>
 </html>
