--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,12 +28,12 @@
 
             <div class="field-login flexSCC">
                 <label for="">Profile Image </label>
-                <input  id="input-avatar"  onkeyup="keyupE()" autocomplete="off" type="text" placeholder="Ingrese el link de la imagen" value="https://store.playstation.com/store/api/chihiro/00_09_000/container/US/en/99/UP2538-CUSA05620_00-AV00000000000118//image?_version=00_09_000&platform=chihiro&w=720&h=720&bg_color=000000&opacity=100">
+                <input  name="avatar" id="input-avatar"  onkeyup="keyupE()" autocomplete="off" type="text" placeholder="Ingrese el link de la imagen" value="https://store.playstation.com/store/api/chihiro/00_09_000/container/US/en/99/UP2538-CUSA05620_00-AV00000000000118//image?_version=00_09_000&platform=chihiro&w=720&h=720&bg_color=000000&opacity=100">
                 
             </div>
             <div class="field-login flexSCC">
                 <label for="">Username</label>
-                <input autocomplete="off" type="text" name="username" placeholder="ingrese su usuario">
+                <input autocomplete="off" type="text" name="username" placeholder="Ingrese su usuario">
             </div>
             <input type="submit" value="Join Chat">
         </form>
