--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/public/css/header.css">
 </head>
 <body>
-    <img src="/public/assets/Logo.svg" alt="">
-    <h1>Room</h1>
-    <p>A simple group chat</p>
+    <div class="container-header">
+
+        <img src="/public/assets/Logo.svg" alt="">
+        <h1 class="header-h1">Room</h1>
+        <p>A simple group chat</p>
+    </div>
 </body>
 </html>
