--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,6 +1,23 @@
+@import "font.css";
+
+
 *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
     
+}
+.container-chatpage{
+    display: flex;
+
+
+}
+.all-messages{
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+}
+.message-container p{
+    color: #000000 !important;
+    text-align: left;
 }
