Se añadio el autoscroll bottom cuando llega un nuevo mensaje

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -63,7 +63,7 @@
     overflow:auto;
     display: flex;
     flex-direction: column-reverse;
-    padding: 48px 128px;
+    padding: 0 128px;
 }
 
 
