--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -18,7 +18,7 @@
             <%- include('partials/sidebar'); -%>
 
             <div class="container-chat">
-                <div class="header-chat">
+                <div class="header-chat" id="">
                     <img id="myAvatar" src="<%=avatar%>" width="48" height="48" alt="">
                     <h3 class="header-user" id="<%=username%>"><%= username %></h3>
                 </div>
