--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -69,7 +69,6 @@
 
 /* MESSAGE Container*/
 .message-container p{
-    color: #000000 !important;
     text-align: left;
 }
 
@@ -85,22 +84,33 @@
     border-radius: 50%;
 }
 .message-container .message-info{
-    background: #eee;
     display: flex;
     flex-direction: column;
-    padding: 12px;
     border-radius: 4px;
+    padding: 12px 128px 12px 16px;
+    position: relative;
 }
 .message-container .message-info h2{
     font-size: 14px;
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 600;
-    color: #000000;
+    margin-bottom: 12px;
 }
 .message-container .message-info p{
     font-size: 16px;
     font-family: 'Nunito Sans', sans-serif;
-    color: rgba(0,0,0,.67);
+    color: inherit;
+}
+
+.message-container .message-info .timeMessage{
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    position: absolute;
+    bottom: 16%;
+    right: 5%;
+    transform:translate(-5%,-16%);
+    opacity: .67;
 }
 
 .myMessage{
@@ -112,6 +122,17 @@
     flex-direction: row;
 }
 
+.myMessage .message-info{
+    background: rgb(50, 66, 102);
+    color: #fff;
+    justify-content: center;
+  
+}
+.notMyMessage .message-info{
+    background: #eee;
+    color:rgba(0,0,0,.67);
+
+}
 
 /* INPUT CHAT */
 .field-chat{
