--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -2,7 +2,7 @@
     width: 400px;
     height: 100vh;
     display: flex;
-    box-shadow: 0 0 99px 1px #D9D9D9;
+    box-shadow: 0 0 17px 6px rgba(0,0,0,.1);
     padding: 24px 32px;
     display: flex;
     justify-content: center;
