Se modifico contenedores del mensaje

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -26,7 +26,7 @@
                 <div class="chat-screen">
                     <div id="container-message" class="all-messages"></div>
                     <div class="field-chat">
-                        <input onkeypress="typeKeyboard(event)" id="field-message" type="text" placeholder="Escribe un mensaje">
+                        <input autofocus onkeypress="typeKeyboard(event)" id="field-message" type="text" placeholder="Escribe un mensaje">
                         <button onclick="sendMessage()">
                             <img src="/public/assets/send-message-button.svg" alt="">
                         </button> 
