--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -12,8 +12,11 @@
         
         <div class="header-side-bar">
                 <%- include('header'); -%>
-                <div class="all-user-connected">
+                <div class="body-sidebar">
                     <h2 class="h2-user-connected">In room</h2>
+                    <div class="all-user-connected">
+
+                    </div>
                 </div>
 
         </div>
