--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -64,6 +64,7 @@
     display: flex;
     flex-direction: column-reverse;
     padding: 0 128px;
+    position: relative;
 }
 
 
@@ -87,19 +88,22 @@
     display: flex;
     flex-direction: column;
     border-radius: 4px;
-    padding: 12px 128px 12px 16px;
+    padding: 12px 16px 12px 16px;
     position: relative;
+    width: fit-content;
+    word-break: break-all;
 }
 .message-container .message-info h2{
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'Nunito Sans', sans-serif;
-    font-weight: 600;
+    font-weight: 700 !important;
     margin-bottom: 12px;
 }
 .message-container .message-info p{
     font-size: 16px;
     font-family: 'Nunito Sans', sans-serif;
     color: inherit;
+    margin-right: 64px;
 }
 
 .message-container .message-info .timeMessage{
@@ -111,6 +115,7 @@
     right: 5%;
     transform:translate(-5%,-16%);
     opacity: .67;
+    margin: 0;
 }
 
 .myMessage{
@@ -122,17 +127,31 @@
     flex-direction: row;
 }
 
-.myMessage .message-info{
-    background: rgb(50, 66, 102);
+.myMessageRepeat{
+    margin: 16px 80px 16px auto;
+    flex-direction: row-reverse;
+}
+
+.notMyMessageRepeat{
+    margin: 16px auto 16px 80px;
+    flex-direction: row;
+}
+
+
+.myMessage .message-info, .myMessageRepeat .message-info{
+    background: #6b7094;
     color: #fff;
     justify-content: center;
   
 }
-.notMyMessage .message-info{
+.notMyMessage .message-info, .notMyMessageRepeat .message-info{
     background: #eee;
     color:rgba(0,0,0,.67);
 
 }
+
+
+
 
 /* INPUT CHAT */
 .field-chat{
