--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -2,11 +2,12 @@
     width: 400px;
     height: 100vh;
     display: flex;
-    box-shadow: 0 0 17px 6px rgba(0,0,0,.1);
     padding: 24px 32px;
     display: flex;
     justify-content: center;
     position: relative;
+    background: #fafafa;
+    overflow: hidden;
 }
 
 .header-side-bar{
@@ -14,7 +15,7 @@
 }
 
 .h2-user-connected{
-    margin-top: 2em;
+    margin:1em 0;
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 600;
     color: #6B7094;
@@ -26,6 +27,11 @@
     justify-content: flex-start;
     align-items: center;
     margin: 20px 0;
+    background: #fafafa;
+}
+.newUser:hover{
+    transition: all .2s ease;
+    background: #eee;
 }
 .newUser img{
     border-radius: 50px;
@@ -34,7 +40,12 @@
 .username-sb{
     font-family: 'Nunito Sans', sans-serif;
     font-size: 16px;
-    color: #6B7094;
+    color: #494c65;
     font-weight: 400;
-    margin-left: 12px;
+    margin-left: 16px;
+    font-weight: 700;
+}
+.all-user-connected{
+    height: 65vh;
+    overflow: auto;
 }
