--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -19,6 +19,10 @@
                     </div>
                 </div>
 
+                <form id="form-logout" action="/logout" method="POST">
+                    <input id="btn-logout"  type="submit" value="Salir del chat">
+                </form>
+
         </div>
 
 
