--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -113,9 +113,10 @@
     position: absolute;
     bottom: 16%;
     right: 5%;
-    transform:translate(-5%,-16%);
+    right: 0;
+    transform: translate(0%,-16%);
     opacity: .67;
-    margin: 0;
+    margin: 0 12px 0 0;
 }
 
 .myMessage{
