Se añadio META TAGS

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
+    <meta property="og:title" content="Room chat">
+    <meta property="og:image" content="https://raw.githubusercontent.com/JairHuamanBellido/ChatRoom/master/public/some%20images/Room%20-%20L.png">
+    <meta property="og:description" content="Only chat room for everyone">
+    <meta name="author" content="Jair Huaman Bellido">
 
     <!-- AUTHOR -->
     <!-- CHAT MADE BY JAIR HUAMAN BELLIDO -->
