--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chat</title>
+    <meta name="theme-color" content="#F56F98" />
+
     <!-- AUTHOR -->
     <!-- CHAT MADE BY JAIR HUAMAN BELLIDO -->
     <link rel="stylesheet" href="../public/css/chat.css">
+    <link rel="stylesheet" href="/public/css/Mq.css">
+
 </head>
 
 <body>
