--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,10 +9,12 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/JairHuamanBellido/ChatRoom/master/public/some%20images/Room%20-%20L.png">
     <meta property="og:description" content="Only chat room for everyone">
     <meta name="author" content="Jair Huaman Bellido">
+    <meta name="theme-color" content="#F56F98" />
 
     <!-- AUTHOR -->
     <!-- CHAT MADE BY JAIR HUAMAN BELLIDO -->
     <link rel="stylesheet" href="/public/css/login.css">
+    <link rel="stylesheet" href="/public/css/Mq.css">
 
 </head>
 <body>
